--- a/public/index.html
+++ b/public/index.html
@@ -99,6 +99,8 @@
             <!-- Collision Testing and Physics Testing-->
             <a-box color = "#AA0000" position = "-3 14 -4"
             dynamic-body ></a-box>
+            <a-box color = "#0000AA" position = "-3 16 -4.5"
+            dynamic-body ></a-box>
             
             <!--Making a clock to toggle Day/Night-->
             <a-entity id="clock" class = "button interactive" position="3 14 5" geometry="primitive:cylinder; radius:0.8; height:0.5;" rotation ="0, 0, 90"
