--- a/public/index.html
+++ b/public/index.html
@@ -70,7 +70,146 @@
                 <audio id="light1_sfx" src = "assets/sound/lightSwitch_1.ogg" preload = "auto" crossorigin = "anonymous"></audio>
 
                 <a-asset-item id="apartment_model" response-type="arraybuffer" src="assets/models/apartment.gltf"></a-asset-item>
-                <a-asset-item id="chair_model" response-type="arraybuffer" src="assets/models/GLTF/chair.glb"></a-asset-item>
+
+                <a-asset-item id="bathCab_model" response-type="arraybuffer" src="assets/models/GLTF/bathroomCabinet.glb"></a-asset-item>
+                <a-asset-item id="bathCabD_model" response-type="arraybuffer" src="assets/models/GLTF/bathroomCabinetDrawer.glb"></a-asset-item>
+                <a-asset-item id="_model" response-type="arraybuffer" src="assets/models/GLTF/bathroomMirror.glb"></a-asset-item>
+                <a-asset-item id="_model" response-type="arraybuffer" src="assets/models/GLTF/bathroomSink.glb"></a-asset-item>
+                <a-asset-item id="_model" response-type="arraybuffer" src="assets/models/GLTF/bathroomSinkSquare.glb"></a-asset-item>
+                <a-asset-item id="_model" response-type="arraybuffer" src="assets/models/GLTF/bathtub.glb"></a-asset-item>
+                <a-asset-item id="_model" response-type="arraybuffer" src="assets/models/GLTF/bear.glb"></a-asset-item>
+                <a-asset-item id="_model" response-type="arraybuffer" src="assets/models/GLTF/bedBunk.glb"></a-asset-item>
+                <a-asset-item id="_model" response-type="arraybuffer" src="assets/models/GLTF/bedDouble.glb"></a-asset-item>
+                <a-asset-item id="_model" response-type="arraybuffer" src="assets/models/GLTF/bedSingle.glb"></a-asset-item>
+                <a-asset-item id="_model" response-type="arraybuffer" src="assets/models/GLTF/bench.glb"></a-asset-item>
+                <a-asset-item id="_model" response-type="arraybuffer" src="assets/models/GLTF/benchCushion.glb"></a-asset-item>
+                <a-asset-item id="_model" response-type="arraybuffer" src="assets/models/GLTF/benchCushionLow.glb"></a-asset-item>
+                <a-asset-item id="_model" response-type="arraybuffer" src="assets/models/GLTF/bookcaseClosed.glb"></a-asset-item>
+                <a-asset-item id="_model" response-type="arraybuffer" src="assets/models/GLTF/bookcaseClosedWide.glb"></a-asset-item>
+                <a-asset-item id="_model" response-type="arraybuffer" src="assets/models/GLTF/bookcaseOpen.glb"></a-asset-item>
+                <a-asset-item id="_model" response-type="arraybuffer" src="assets/models/GLTF/bookcaseOpenLow.glb"></a-asset-item>
+                <a-asset-item id="_model" response-type="arraybuffer" src="assets/models/GLTF/books.glb"></a-asset-item>
+
+                <a-asset-item id="_model" response-type="arraybuffer" src="assets/models/GLTF/cabinetBed.glb"></a-asset-item>
+                <a-asset-item id="_model" response-type="arraybuffer" src="assets/models/GLTF/cabinetBedDrawer.glb"></a-asset-item>
+                <a-asset-item id="_model" response-type="arraybuffer" src="assets/models/GLTF/cabinetBedDrawerTable.glb"></a-asset-item>
+                <a-asset-item id="_model" response-type="arraybuffer" src="assets/models/GLTF/cabinetTelevision.glb"></a-asset-item>
+                <a-asset-item id="_model" response-type="arraybuffer" src="assets/models/GLTF/cabinetTelevisionDoors.glb"></a-asset-item>
+                <a-asset-item id="_model" response-type="arraybuffer" src="assets/models/GLTF/cardboardBoxClosed.glb"></a-asset-item>
+                <a-asset-item id="_model" response-type="arraybuffer" src="assets/models/GLTF/cardboardBoxOpen.glb"></a-asset-item>
+                <a-asset-item id="_model" response-type="arraybuffer" src="assets/models/GLTF/ceilingFan.glb"></a-asset-item>
+                <a-asset-item id="_model" response-type="arraybuffer" src="assets/models/GLTF/chair.glb"></a-asset-item>
+                <a-asset-item id="_model" response-type="arraybuffer" src="assets/models/GLTF/chairCushion.glb"></a-asset-item>
+                <a-asset-item id="_model" response-type="arraybuffer" src="assets/models/GLTF/chairDesk.glb"></a-asset-item>
+                <a-asset-item id="_model" response-type="arraybuffer" src="assets/models/GLTF/chairModernCushion.glb"></a-asset-item>
+                <a-asset-item id="_model" response-type="arraybuffer" src="assets/models/GLTF/chairModernFrameCushion.glb"></a-asset-item>
+                <a-asset-item id="_model" response-type="arraybuffer" src="assets/models/GLTF/chairRounded.glb"></a-asset-item>
+                <a-asset-item id="_model" response-type="arraybuffer" src="assets/models/GLTF/coatRack.glb"></a-asset-item>
+                <a-asset-item id="_model" response-type="arraybuffer" src="assets/models/GLTF/coatRackStanding.glb"></a-asset-item>
+                <a-asset-item id="_model" response-type="arraybuffer" src="assets/models/GLTF/computerKeyboard.glb"></a-asset-item>
+                <a-asset-item id="_model" response-type="arraybuffer" src="assets/models/GLTF/computerMouse.glb"></a-asset-item>
+                <a-asset-item id="_model" response-type="arraybuffer" src="assets/models/GLTF/computerScreen.glb"></a-asset-item>
+
+                <a-asset-item id="_model" response-type="arraybuffer" src="assets/models/GLTF/desk.glb"></a-asset-item>
+                <a-asset-item id="_model" response-type="arraybuffer" src="assets/models/GLTF/deskCorner.glb"></a-asset-item>
+                <a-asset-item id="_model" response-type="arraybuffer" src="assets/models/GLTF/doorway.glb"></a-asset-item>
+                <a-asset-item id="_model" response-type="arraybuffer" src="assets/models/GLTF/doorwayFront.glb"></a-asset-item>
+                <a-asset-item id="_model" response-type="arraybuffer" src="assets/models/GLTF/doorwayOpen.glb"></a-asset-item>
+                <a-asset-item id="_model" response-type="arraybuffer" src="assets/models/GLTF/dryer.glb"></a-asset-item>
+
+                <a-asset-item id="_model" response-type="arraybuffer" src="assets/models/GLTF/floorCorner.glb"></a-asset-item>
+                <a-asset-item id="_model" response-type="arraybuffer" src="assets/models/GLTF/floorCornerRound.glb"></a-asset-item>
+                <a-asset-item id="_model" response-type="arraybuffer" src="assets/models/GLTF/floorFull.glb"></a-asset-item>
+                <a-asset-item id="_model" response-type="arraybuffer" src="assets/models/GLTF/floorHalf.glb"></a-asset-item>
+
+                <a-asset-item id="_model" response-type="arraybuffer" src="assets/models/GLTF/hoodLarge.glb"></a-asset-item>
+                <a-asset-item id="_model" response-type="arraybuffer" src="assets/models/GLTF/hoodModern.glb"></a-asset-item>
+
+                <a-asset-item id="_model" response-type="arraybuffer" src="assets/models/GLTF/kitchenBar.glb"></a-asset-item>
+                <a-asset-item id="_model" response-type="arraybuffer" src="assets/models/GLTF/kitchenBarEnd.glb"></a-asset-item>
+                <a-asset-item id="_model" response-type="arraybuffer" src="assets/models/GLTF/kitchenBlender.glb"></a-asset-item>
+                <a-asset-item id="_model" response-type="arraybuffer" src="assets/models/GLTF/kitchenCabinet.glb"></a-asset-item>
+                <a-asset-item id="_model" response-type="arraybuffer" src="assets/models/GLTF/kitchenCabinetCornerInner.glb"></a-asset-item>
+                <a-asset-item id="_model" response-type="arraybuffer" src="assets/models/GLTF/kitchenCabinetCornerRound.glb"></a-asset-item>
+                <a-asset-item id="_model" response-type="arraybuffer" src="assets/models/GLTF/kitchenCabinetDrawer.glb"></a-asset-item>
+                <a-asset-item id="_model" response-type="arraybuffer" src="assets/models/GLTF/kitchenCabinetUpper.glb"></a-asset-item>
+                <a-asset-item id="_model" response-type="arraybuffer" src="assets/models/GLTF/kitchenCabinetUpperCorner.glb"></a-asset-item>
+                <a-asset-item id="_model" response-type="arraybuffer" src="assets/models/GLTF/kitchenCabinetUpperDouble.glb"></a-asset-item>
+                <a-asset-item id="_model" response-type="arraybuffer" src="assets/models/GLTF/kitchenCoffeeMachine.glb"></a-asset-item>
+                <a-asset-item id="_model" response-type="arraybuffer" src="assets/models/GLTF/kitchenFridge.glb"></a-asset-item>
+                <a-asset-item id="_model" response-type="arraybuffer" src="assets/models/GLTF/kitchenFridgeBuiltIn.glb"></a-asset-item>
+                <a-asset-item id="_model" response-type="arraybuffer" src="assets/models/GLTF/kitchenFridgeLarge.glb"></a-asset-item>
+                <a-asset-item id="_model" response-type="arraybuffer" src="assets/models/GLTF/kitchenFridgeSmall.glb"></a-asset-item>
+                <a-asset-item id="_model" response-type="arraybuffer" src="assets/models/GLTF/kitchenMicrowave.glb"></a-asset-item>
+                <a-asset-item id="_model" response-type="arraybuffer" src="assets/models/GLTF/kitchenSink.glb"></a-asset-item>
+                <a-asset-item id="_model" response-type="arraybuffer" src="assets/models/GLTF/kitchenStove.glb"></a-asset-item>
+                <a-asset-item id="_model" response-type="arraybuffer" src="assets/models/GLTF/kitchenStoveElectric.glb"></a-asset-item>
+
+                <a-asset-item id="_model" response-type="arraybuffer" src="assets/models/GLTF/lampRoundFloor.glb"></a-asset-item>
+                <a-asset-item id="_model" response-type="arraybuffer" src="assets/models/GLTF/lampRoundTable.glb"></a-asset-item>
+                <a-asset-item id="_model" response-type="arraybuffer" src="assets/models/GLTF/lampSquareCeiling.glb"></a-asset-item>
+                <a-asset-item id="_model" response-type="arraybuffer" src="assets/models/GLTF/lampSquareFloor.glb"></a-asset-item>
+                <a-asset-item id="_model" response-type="arraybuffer" src="assets/models/GLTF/lampSquareTable.glb"></a-asset-item>
+                <a-asset-item id="_model" response-type="arraybuffer" src="assets/models/GLTF/lampWall.glb"></a-asset-item>
+                <a-asset-item id="_model" response-type="arraybuffer" src="assets/models/GLTF/laptop.glb"></a-asset-item>
+                <a-asset-item id="_model" response-type="arraybuffer" src="assets/models/GLTF/loungeChair.glb"></a-asset-item>
+                <a-asset-item id="_model" response-type="arraybuffer" src="assets/models/GLTF/loungeChairRelax.glb"></a-asset-item>
+                <a-asset-item id="_model" response-type="arraybuffer" src="assets/models/GLTF/loungeDesignChair.glb"></a-asset-item>
+                <a-asset-item id="_model" response-type="arraybuffer" src="assets/models/GLTF/loungeDesignSofa.glb"></a-asset-item>
+                <a-asset-item id="_model" response-type="arraybuffer" src="assets/models/GLTF/loungeDesignSofaCorner.glb"></a-asset-item>
+                <a-asset-item id="_model" response-type="arraybuffer" src="assets/models/GLTF/loungeSofa.glb"></a-asset-item>
+                <a-asset-item id="_model" response-type="arraybuffer" src="assets/models/GLTF/loungeSofaCorner.glb"></a-asset-item>
+                <a-asset-item id="_model" response-type="arraybuffer" src="assets/models/GLTF/loungeSofaLong.glb"></a-asset-item>
+                <a-asset-item id="_model" response-type="arraybuffer" src="assets/models/GLTF/loungeSofaOttoman.glb"></a-asset-item>
+
+                <a-asset-item id="_model" response-type="arraybuffer" src="assets/models/GLTF/paneling.glb"></a-asset-item>
+                <a-asset-item id="_model" response-type="arraybuffer" src="assets/models/GLTF/pillow.glb"></a-asset-item>
+                <a-asset-item id="_model" response-type="arraybuffer" src="assets/models/GLTF/pillowBlue.glb"></a-asset-item>
+                <a-asset-item id="_model" response-type="arraybuffer" src="assets/models/GLTF/pillowBlueLong.glb"></a-asset-item>
+                <a-asset-item id="_model" response-type="arraybuffer" src="assets/models/GLTF/plantSmall1.glb"></a-asset-item>
+                <a-asset-item id="_model" response-type="arraybuffer" src="assets/models/GLTF/plantSmall2.glb"></a-asset-item>
+                <a-asset-item id="_model" response-type="arraybuffer" src="assets/models/GLTF/plantSmall3.glb"></a-asset-item>
+                <a-asset-item id="_model" response-type="arraybuffer" src="assets/models/GLTF/pottedPlant.glb"></a-asset-item>
+
+                <a-asset-item id="_model" response-type="arraybuffer" src="assets/models/GLTF/radio.glb"></a-asset-item>
+                <a-asset-item id="_model" response-type="arraybuffer" src="assets/models/GLTF/rugDoormat.glb"></a-asset-item>
+                <a-asset-item id="_model" response-type="arraybuffer" src="assets/models/GLTF/rugRectangle.glb"></a-asset-item>
+                <a-asset-item id="_model" response-type="arraybuffer" src="assets/models/GLTF/rugRound.glb"></a-asset-item>
+                <a-asset-item id="_model" response-type="arraybuffer" src="assets/models/GLTF/rugRounded.glb"></a-asset-item>
+                <a-asset-item id="_model" response-type="arraybuffer" src="assets/models/GLTF/rugSquare.glb"></a-asset-item>
+
+                <a-asset-item id="_model" response-type="arraybuffer" src="assets/models/GLTF/shower.glb"></a-asset-item>
+                <a-asset-item id="_model" response-type="arraybuffer" src="assets/models/GLTF/showerRound.glb"></a-asset-item>
+                <a-asset-item id="_model" response-type="arraybuffer" src="assets/models/GLTF/sideTable.glb"></a-asset-item>
+                <a-asset-item id="_model" response-type="arraybuffer" src="assets/models/GLTF/sideTableDrawers.glb"></a-asset-item>
+                <a-asset-item id="_model" response-type="arraybuffer" src="assets/models/GLTF/speaker.glb"></a-asset-item>
+                <a-asset-item id="_model" response-type="arraybuffer" src="assets/models/GLTF/speakerSmall.glb"></a-asset-item>
+                <a-asset-item id="_model" response-type="arraybuffer" src="assets/models/GLTF/stairs.glb"></a-asset-item>
+                <a-asset-item id="_model" response-type="arraybuffer" src="assets/models/GLTF/stairsCorner.glb"></a-asset-item>
+                <a-asset-item id="_model" response-type="arraybuffer" src="assets/models/GLTF/stairsOpen.glb"></a-asset-item>
+                <a-asset-item id="_model" response-type="arraybuffer" src="assets/models/GLTF/stairsOpenSingle.glb"></a-asset-item>
+                <a-asset-item id="_model" response-type="arraybuffer" src="assets/models/GLTF/stoolBar.glb"></a-asset-item>
+                <a-asset-item id="_model" response-type="arraybuffer" src="assets/models/GLTF/stoolBarSquare.glb"></a-asset-item>
+
+                <a-asset-item id="_model" response-type="arraybuffer" src="assets/models/GLTF/table.glb"></a-asset-item>
+                <a-asset-item id="_model" response-type="arraybuffer" src="assets/models/GLTF/tableCloth.glb"></a-asset-item>
+                <a-asset-item id="_model" response-type="arraybuffer" src="assets/models/GLTF/tableCoffee.glb"></a-asset-item>
+                <a-asset-item id="_model" response-type="arraybuffer" src="assets/models/GLTF/tableCoffeeGlass.glb"></a-asset-item>
+                <a-asset-item id="_model" response-type="arraybuffer" src="assets/models/GLTF/tableCoffeeGlassSquare.glb"></a-asset-item>
+                <a-asset-item id="_model" response-type="arraybuffer" src="assets/models/GLTF/tableCross.glb"></a-asset-item>
+                <a-asset-item id="_model" response-type="arraybuffer" src="assets/models/GLTF/tableCrossCloth.glb"></a-asset-item>
+                <a-asset-item id="_model" response-type="arraybuffer" src="assets/models/GLTF/tableGlass.glb"></a-asset-item>
+                <a-asset-item id="_model" response-type="arraybuffer" src="assets/models/GLTF/tableRound.glb"></a-asset-item>
+                <a-asset-item id="_model" response-type="arraybuffer" src="assets/models/GLTF/televisionAntenna.glb"></a-asset-item>
+                <a-asset-item id="_model" response-type="arraybuffer" src="assets/models/GLTF/televisionModern.glb"></a-asset-item>
+                <a-asset-item id="_model" response-type="arraybuffer" src="assets/models/GLTF/televisionVintage.glb"></a-asset-item>
+                <a-asset-item id="_model" response-type="arraybuffer" src="assets/models/GLTF/toaster.glb"></a-asset-item>
+                <a-asset-item id="_model" response-type="arraybuffer" src="assets/models/GLTF/toilet.glb"></a-asset-item>
+                <a-asset-item id="_model" response-type="arraybuffer" src="assets/models/GLTF/toiletSquare.glb"></a-asset-item>
+                <a-asset-item id="_model" response-type="arraybuffer" src="assets/models/GLTF/trashcan.glb"></a-asset-item>
+
+                <a-asset-item id="_model" response-type="arraybuffer" src="assets/models/GLTF/washer.glb"></a-asset-item>
+                <a-asset-item id="_model" response-type="arraybuffer" src="assets/models/GLTF/washerDryerStacked.glb"></a-asset-item>
 
             </a-assets>
 
@@ -83,9 +222,14 @@
                 <a-entity cursor="rayOrigin:mouse;" raycaster="far:20; interval:200; objects:.interactive;"></a-entity>
             </a-entity>
 
+            <a-entity id = "apartment" static-body>
+                <a-entity id="floor" position="0 10.0 0"
+                geometry="primitive: box; depth: 20.0; width:20.0; height:1.0;" material="color:rgb(200, 200, 200);"
+                static-body></a-entity>
+                <a-entity id="apartment_build" position="0 10 0" scale="0.2 0.2 0.2" gltf-model="#apartment_model" shadow static-body></a-entity>
+                <a-entity id="chair" position="0 10 0" scale="12 12 12" gltf-model="#chair_model" shadow static-body></a-entity>
+            </a-entity>
 
-            <a-entity id="apartment" position="0 10 0" scale="0.2 0.2 0.2" gltf-model="#apartment_model" shadow static-body></a-entity>
-            <a-entity id="chair" position="0 10 0" scale="12 12 12" gltf-model="#chair_model" shadow static-body></a-entity>
            <!-- <a-entity id = "apartment" static-body>
 
                 
