--- a/public/index.html
+++ b/public/index.html
@@ -82,6 +82,15 @@
 
             <!-- bedroom -->
 
+            <a-asset-item id="bedS_model" response-type="arraybuffer" src="assets/models/GLTF/bedSingle.glb"></a-asset-item>
+            <a-asset-item id="bCO_model" response-type="arraybuffer" src="assets/models/GLTF/bookcaseOpen.glb"></a-asset-item>
+            <a-asset-item id="desk_model" response-type="arraybuffer" src="assets/models/GLTF/desk.glb"></a-asset-item>
+            <a-asset-item id="cBD_model" response-type="arraybuffer" src="assets/models/GLTF/cabinetBedDrawer.glb"></a-asset-item>
+            <a-asset-item id="coatR_model" response-type="arraybuffer" src="assets/models/GLTF/coatRack.glb"></a-asset-item>
+            <a-asset-item id="sT_model" response-type="arraybuffer" src="assets/models/GLTF/sideTable.glb"></a-asset-item>
+            <a-asset-item id="sTD_model" response-type="arraybuffer" src="assets/models/GLTF/sideTableDrawers.glb"></a-asset-item>
+            <a-asset-item id="trashcan_model" response-type="arraybuffer" src="assets/models/GLTF/trashcan.glb"></a-asset-item>
+
             <!-- bathroom -->
 
             <a-asset-item id="sR_model" response-type="arraybuffer" src="assets/models/GLTF/showerRound.glb"></a-asset-item>
@@ -259,12 +268,17 @@
             <a-entity class = "ambient-music" position="-4 2 -9" sound="src:#city_amb; autoplay:false"></a-entity>
             <a-entity class = "ambient-music" position="10 2 -9" sound="src:#city_amb; autoplay:false"></a-entity>
 
-            <a-entity id="camera" camera wasd-controls look-controls position = "0 20 10"> <!--spawning us high in an apartment-->
+            <!-- camera -->        
+
+            <a-entity id="camera" camera wasd-controls look-controls position = "-10 20 20"> <!--spawning us high in an apartment-->
                 <!--<a-entity light="type:spot; intensity:1.3; castShadow:true; shadowBias:-0.0005; angle:40; penumbra:0.3;" position = "0 1 0"></a-entity>-->
                 <a-entity cursor="rayOrigin:mouse;" raycaster="far:20; interval:200; objects:.interactive;"></a-entity>
             </a-entity>
 
             <a-entity id = "apartment" static-body>
+
+            <!-- apartment layout -->
+
                 <a-entity id="floor" position="0 10.0 0"
                 geometry="primitive: box; depth: 20.0; width:20.0; height:1.0;" material="color:rgb(200, 200, 200);"
                 static-body></a-entity>
@@ -280,6 +294,15 @@
             <a-entity id="rug_LR" position="9 10.5 -6" scale="11 11 11" rotation = "0 0 0" gltf-model="#rugR_model" shadow static-body></a-entity>
 
             <!-- bedroom -->
+
+            <a-entity id="bed" position="-15 11 8" scale="12 12 12" rotation = "0 180 0" gltf-model="#bedS_model" shadow static-body></a-entity>
+            <a-entity id="closet" position="-18 20 2" scale="13 15 11" rotation = "0 0 0" gltf-model="#coatR_model" shadow static-body></a-entity>
+            <a-entity id="closet" position="-26 20 2" scale="13 15 11" rotation = "0 0 0" gltf-model="#coatR_model" shadow static-body></a-entity>
+            <a-entity id="bed_table" position="-26 11 7.5" scale="11 6 11" rotation = "0 0 0" gltf-model="#sT_model" shadow static-body></a-entity>
+            <a-entity id="cab" position="-16.5 11 18" scale="11 12 11" rotation = "0 180 0" gltf-model="#cBD_model" shadow static-body></a-entity>
+            <a-entity id="trash" position="-14 10 14" scale="11 11 11" rotation = "0 0 0" gltf-model="#trashcan_model" shadow static-body></a-entity>
+            <a-entity id="desk" position="-6 10 16" scale="14 15 12" rotation = "0 180 0" gltf-model="#desk_model" shadow static-body></a-entity>
+            <a-entity id="bookcase" position="-2 10 20" scale="11 14 11" rotation = "0 90 0" gltf-model="#bCO_model" shadow static-body></a-entity>
 
             <!-- bathroom -->
 
